Missing reason for blocklisting in about:support
Categories
(Core :: Graphics, defect, P3)
Tracking
()
People
(Reporter: aosmond, Assigned: aosmond)
References
(Regressed 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Set release status flags based on info from the regressing bug 1625474
| Assignee | ||
Comment 2•3 years ago
|
||
We don't include the failure ID in the feature log iteration:
https://searchfox.org/mozilla-central/rev/650c19c96529eb28d081062c1ca274bc50ef3635/widget/GfxInfoBase.cpp#1749
But we do in the telemetry:
https://searchfox.org/mozilla-central/rev/650c19c96529eb28d081062c1ca274bc50ef3635/widget/GfxInfoBase.cpp#1797
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1625474
| Assignee | ||
Comment 4•3 years ago
|
||
We used to provide links to the bug numbers but this was broken
somewhere along the way. Now it is provided the failure IDs from which
it can attempt to extract a bug number, as well as always display any
failure ID and message whenever possible.
Updated•3 years ago
|
Comment 6•3 years ago
|
||
| bugherder | ||
Comment 7•3 years ago
|
||
The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox108towontfix.
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Description
•