gfx/config/gfxFeature.cpp
@@ -210,15 +210,15 @@ void FeatureState::ForEachStatusChange(
   aCallback("default", mDefault.mStatus, mDefault.MessageOrNull(),
             mDefault.FailureId());
   if (mUser.IsInitialized()) {
-    aCallback("user", mUser.mStatus, mUser.Message(), mDefault.FailureId());
+    aCallback("user", mUser.mStatus, mUser.Message(), mUser.FailureId());
   }
   if (mEnvironment.IsInitialized()) {
     aCallback("env", mEnvironment.mStatus, mEnvironment.Message(),
-              mDefault.FailureId());
+              mEnvironment.FailureId());
   }
   if (mRuntime.IsInitialized()) {
     aCallback("runtime", mRuntime.mStatus, mRuntime.Message(),
-              mDefault.FailureId());
+              mRuntime.FailureId());
   }
 }
 
